# fastembed

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  NOTICE  README.md  RELEASE.md  dev-requirements.txt  index.html  mkdocs.yml  pyproject.toml  pyrightconfig.json  sitemap.xml  usage.py
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yaml  feature-request.yml  model-request.yml
.github/workflows/: ci.yml  python-publish.yml  python-tests.yml  type-checkers.yml
Getting Started/: index.html
docs/: Getting Started.ipynb  Usage.ipynb  index.md
docs/With Qdrant/: Binary Quantization with Qdrant.ipynb
docs/examples/: 01_Retrieval.ipynb  03_HF_vs_FastEmbed.ipynb  04_1M_Embedding_Creation.ipynb  ColBERT_with_FastEmbed.ipynb  FastEmbed_GPU.ipynb  FastEmbed_Multi_GPU.ipynb  FastEmbed_vs_HF_Comparison.ipynb  HF_vs_FastEmbed.ipynb  Hindi Tamil RAG with Navrsasa.ipynb  Hindi_Tamil_RAG_with_Navarasa7B.ipynb  Hindi_Tamil_RAG_with_Navrsasa.ipynb  Hindi_Tamil_RAG_with_Navrsasa7B.ipynb  Hybrid_Search.ipynb  Image_Embedding.ipynb  Retrieval with FastEmbed.ipynb  Retrieval_with_FastEmbed.ipynb  SPLADE_with_FastEmbed.ipynb  Supported_Models.ipynb  Throughput_Comparison.ipynb  To_ONNX.ipynb  Usage with Qdrant.ipynb  Usage_With_Qdrant.ipynb
docs/experimental/: Binary Quantisation.ipynb  Binary Quantization from Scratch.ipynb  Binary Quantization with Qdrant.ipynb  Binary Quantization.ipynb  MUVERA_Embeddings_from_Multi_Vector_Representations.ipynb  Throughput_Across_Models.ipynb
docs/how-to/: Hybrid_Search.ipynb
docs/overrides/: main.html
docs/qdrant/: Binary_Quantization_with_Qdrant.ipynb  Retrieval_with_FastEmbed.ipynb  Usage_With_Qdrant.ipynb
examples/ColBERT_with_FastEmbed/: index.html
examples/FastEmbed_GPU/: index.html
examples/FastEmbed_Multi_GPU/: index.html
examples/FastEmbed_vs_HF_Comparison/: index.html
examples/Hindi_Tamil_RAG_with_Navarasa7B/: index.html
examples/Hybrid_Search/: index.html
examples/Image_Embedding/: index.html
examples/Retrieval_with_FastEmbed/: index.html
examples/SPLADE_with_FastEmbed/: index.html
examples/Supported_Models/: index.html
examples/Usage_With_Qdrant/: index.html
experimental/Binary Quantization from Scratch/: index.html
experimental/Binary Quantization with Qdrant/: index.html
experiments/: 01_ONNX_Port.ipynb  02_SPLADE_to_ONNX.ipynb  03_CLIP_TO_ONNX.ipynb  Converting_SPLADE_to_ONNX.ipynb  Example. Convert Resnet50 to ONNX.ipynb  Throughput_Across_Models.ipynb  Throughput_Across_Models_GPU.ipynb  attention_export.py  colpali_convert_lang_model.py  colpali_image_test.ipynb  colpali_text_test.ipynb  cross_encoders_parallel.ipynb  dynamic_quantization_export.py  late_interaction_colpali.ipynb  try_attention_export.py  try_quantized_model.py
fastembed/: __init__.py  embedding.py  model_loader.py  models.json  models.py  parallel_processor.py  qdrant_client.py  qdrant_mixin.py  speculative.py  splitter.py  types.py
fastembed/bio/: __init__.py  protein_embedding.py
fastembed/common/: __init__.py  model_description.py  model_management.py  models.py  onnx_model.py  pooling.py  preprocessor_utils.py  types.py  utils.py
fastembed/config/: dense_models.json
fastembed/image/: __init__.py  colpali_model.py  image_embedding.py  image_embedding_base.py  onnx_embedding.py  onnx_image_model.py
fastembed/late_interaction/: __init__.py  colbert.py  colpali.py  jina_colbert.py  jina_colbert_v2.py  late_interaction_embedding_base.py  late_interaction_image_embedding.py  late_interaction_image_embedding_base.py  late_interaction_text_embedding.py  token_embeddings.py
fastembed/late_interaction_multimodal/: __init__.py  colpali.py  (+4 more)
fastvector/: embedding.py  qdrant_client.py  qdrant_mixin.py
fooling_around/: 01_ONNX_Port.ipynb  02_HF_vs_FastEmbed.ipynb  Throughput_Across_Models.ipynb
nbs/: 01_ONNX_Port.ipynb  02_Usage.ipynb  ONNX_Port.ipynb
overrides/: main.html
search/: search_index.json
tests/: __init__.py  config.py  get_all_model_hash.py  profiling.py  test_add_custom_model.py  test_attention_embeddings.py  test_common.py  test_custom_models.py  test_image_onnx_embeddings.py  test_late_interaction_embeddings.py  test_late_interaction_image_embeddings.py  test_late_interaction_multimodal.py  test_multi_gpu.py  test_multi_task_models.py  test_onnx_embeddigns.py  test_onnx_embeddings.py  test_pooling.py  test_postprocess.py  test_sentence_transformers_compat.py  test_sparse_embeddings.py  test_splitter.py  test_text_cross_encoder.py  test_text_multitask_embeddings.py  test_text_onnx_embeddings.py  type_stub.py  utils.py
(+53 files in other folders)
