[tool.poetry]
name = "fastembed"
version = "0.2.6"
description = "Fast, light, accurate library built for retrieval embedding generation"
authors = ["NirantK <nirant.bits@gmail.com>"]
license = "Apache License"
readme = "README.md"
packages = [{include = "fastembed"}]
homepage = "https://github.com/qdrant/fastembed"
repository = "https://github.com/qdrant/fastembed"
keywords = ["vector", "embedding", "neural", "search", "qdrant", "sentence-transformers"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.13"
onnx = [
    {version = "^1.15.0", optional = true, markers = "extra != 'gpu'"}
]
onnxruntime = [
    {version = "^1.17.0", optional = true, markers = "extra != 'gpu'"}
]
onnxruntime-gpu = [
    { version = "^1.17.0", optional = true, python = "<3.13", markers = "extra == 'gpu'" }
]

tqdm = "^4.66"
requests = "^2.31"
tokenizers = "^0.15.1"
huggingface-hub = "^0.20"
loguru = "^0.7.2"
numpy = [
    { version = ">=1.21", python = "<3.12" },
    { version = ">=1.26", python = ">=3.12" }
]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
ruff = "^0.3.1"
notebook = ">=7.0.2"
pre-commit = {version = "^3.6.2", python = ">=3.9,<3.12" }

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.10"
mkdocstrings = "^0.24.0"
pillow = "^10.2.0"
cairosvg = "^2.7.1"
mknotebooks = "^0.8.0"

[tool.poetry.extras]
gpu = ["onnxruntime-gpu"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 99
