[tool.poetry]
name = "fastembed"
version = "0.6.1"
description = "Fast, light, accurate library built for retrieval embedding generation"
authors = ["Qdrant Team <info@qdrant.tech>", "NirantK <nirant.bits@gmail.com>"]
license = "Apache License"
readme = "README.md"
packages = [{include = "fastembed"}]
homepage = "https://github.com/qdrant/fastembed"
repository = "https://github.com/qdrant/fastembed"
keywords = ["vector", "embedding", "neural", "search", "qdrant", "sentence-transformers"]

[tool.poetry.dependencies]
python = ">=3.9.0"
numpy = [
    { version = ">=1.21", python = ">=3.10,<3.12" },
    { version = ">=1.26", python = ">=3.12,<3.13" },
    { version = ">=2.1.0", python = ">=3.13" },
    { version = ">=1.21,<2.1.0", python = "<3.10" },
]
onnxruntime = [
    { version = ">1.20.0", python = ">=3.13" },
    { version = ">=1.17.0,<1.20.0", python = "<3.10" },
    { version = ">=1.17.0,!=1.20.0", python = ">=3.10,<3.13" },
]
tqdm = "^4.66"
requests = "^2.31"
tokenizers = ">=0.15,<1.0"
huggingface-hub = ">=0.20,<1.0"
loguru = "^0.7.2"
pillow = ">=10.3.0,<12.0.0"
mmh3 = ">=4.1.0,<6.0.0"
py-rust-stemmers = "^0.1.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
ruff = ">=0.3.1,<1.0"

[tool.poetry.group.dev.dependencies]
notebook = ">=7.0.2"
pre-commit = "^3.6.2"
onnx = ">=1.15.0"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.10"
mkdocstrings = "^0.24.0"
pillow = ">=10.3.0,<12.0.0"
cairosvg = "^2.7.1"
mknotebooks = "^0.8.0"

[tool.poetry.group.types.dependencies]
pyright = ">=1.1.293"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
typeCheckingMode = "strict"

[tool.ruff]
line-length = 99
